src/vk_mem_alloc.rs

extern "C" {
    /// \brief Unmaps memory represented by given allocation, mapped previously using vmaMapMemory().
    ///
    /// For details, see description of vmaMapMemory().
    pub fn vmaUnmapMemory(allocator: VmaAllocator, allocation: VmaAllocation);
}
/// \brief Optional configuration parameters to be passed to function vmaDefragment().
#[repr(C)]
pub struct VmaDefragmentationInfo {
    /// \brief Maximum total numbers of bytes that can be copied while moving allocations to different places.
    ///
    /// Default is `VK_WHOLE_SIZE`, which means no limit.
    pub maxBytesToMove: VkDeviceSize,
    /// \brief Maximum number of allocations that can be moved to different place.
    ///
    /// Default is `UINT32_MAX`, which means no limit.
    pub maxAllocationsToMove: u32,
}
#[test]
fn bindgen_test_layout_VmaDefragmentationInfo() {
    assert_eq!(
        ::std::mem::size_of::<VmaDefragmentationInfo>(),
        16usize,
        concat!("Size of: ", stringify!(VmaDefragmentationInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<VmaDefragmentationInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(VmaDefragmentationInfo))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaDefragmentationInfo>())).maxBytesToMove as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaDefragmentationInfo),
            "::",
            stringify!(maxBytesToMove)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaDefragmentationInfo>())).maxAllocationsToMove as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaDefragmentationInfo),
            "::",
            stringify!(maxAllocationsToMove)
        )
    );
}
/// \brief Statistics returned by function vmaDefragment().
#[repr(C)]
pub struct VmaDefragmentationStats {
    /// Total number of bytes that have been copied while moving allocations to different places.
    pub bytesMoved: VkDeviceSize,
    /// Total number of bytes that have been released to the system by freeing empty `VkDeviceMemory` objects.
    pub bytesFreed: VkDeviceSize,
    /// Number of allocations that have been moved to different places.
    pub allocationsMoved: u32,
    /// Number of empty `VkDeviceMemory` objects that have been released to the system.
    pub deviceMemoryBlocksFreed: u32,
}
#[test]
fn bindgen_test_layout_VmaDefragmentationStats() {
    assert_eq!(
        ::std::mem::size_of::<VmaDefragmentationStats>(),
        24usize,
        concat!("Size of: ", stringify!(VmaDefragmentationStats))
    );
    assert_eq!(
        ::std::mem::align_of::<VmaDefragmentationStats>(),
        8usize,
        concat!("Alignment of ", stringify!(VmaDefragmentationStats))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaDefragmentationStats>())).bytesMoved as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaDefragmentationStats),
            "::",
            stringify!(bytesMoved)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaDefragmentationStats>())).bytesFreed as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaDefragmentationStats),
            "::",
            stringify!(bytesFreed)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaDefragmentationStats>())).allocationsMoved as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaDefragmentationStats),
            "::",
            stringify!(allocationsMoved)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaDefragmentationStats>())).deviceMemoryBlocksFreed as *const _
                as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaDefragmentationStats),
            "::",
            stringify!(deviceMemoryBlocksFreed)
        )
    );
}
extern "C" {
    /// \brief Compacts memory by moving allocations.
    ///
    /// @param pAllocations Array of allocations that can be moved during this compation.
    /// @param allocationCount Number of elements in pAllocations and pAllocationsChanged arrays.
    /// @param[out] pAllocationsChanged Array of boolean values that will indicate whether matching allocation in pAllocations array has been moved. This parameter is optional. Pass null if you don't need this information.
    /// @param pDefragmentationInfo Configuration parameters. Optional - pass null to use default values.
    /// @param[out] pDefragmentationStats Statistics returned by the function. Optional - pass null if you don't need this information.
    /// @return VK_SUCCESS if completed, VK_INCOMPLETE if succeeded but didn't make all possible optimizations because limits specified in pDefragmentationInfo have been reached, negative error code in case of error.
    ///
    /// This function works by moving allocations to different places (different
    /// `VkDeviceMemory` objects and/or different offsets) in order to optimize memory
    /// usage. Only allocations that are in pAllocations array can be moved. All other
    /// allocations are considered nonmovable in this call. Basic rules:
    ///
    /// - Only allocations made in memory types that have
    /// `VK_MEMORY_PROPERTY_HOST_VISIBLE_BIT` flag can be compacted. You may pass other
    /// allocations but it makes no sense - these will never be moved.
    /// - You may pass allocations made with #VMA_ALLOCATION_CREATE_DEDICATED_MEMORY_BIT but
    /// it makes no sense - they will never be moved.
    /// - Both allocations made with or without #VMA_ALLOCATION_CREATE_MAPPED_BIT
    /// flag can be compacted. If not persistently mapped, memory will be mapped
    /// temporarily inside this function if needed.
    /// - You must not pass same #VmaAllocation object multiple times in pAllocations array.
    ///
    /// The function also frees empty `VkDeviceMemory` blocks.
    ///
    /// After allocation has been moved, its VmaAllocationInfo::deviceMemory and/or
    /// VmaAllocationInfo::offset changes. You must query them again using
    /// vmaGetAllocationInfo() if you need them.
    ///
    /// If an allocation has been moved, data in memory is copied to new place
    /// automatically, but if it was bound to a buffer or an image, you must destroy
    /// that object yourself, create new one and bind it to the new memory pointed by
    /// the allocation. You must use `vkDestroyBuffer()`, `vkDestroyImage()`,
    /// `vkCreateBuffer()`, `vkCreateImage()` for that purpose and NOT vmaDestroyBuffer(),
    /// vmaDestroyImage(), vmaCreateBuffer(), vmaCreateImage()! Example:
    ///
    /// \code
    /// VkDevice device = ...;
    /// VmaAllocator allocator = ...;
    /// std::vector<VkBuffer> buffers = ...;
    /// std::vector<VmaAllocation> allocations = ...;
    ///
    /// std::vector<VkBool32> allocationsChanged(allocations.size());
    /// vmaDefragment(allocator, allocations.data(), allocations.size(), allocationsChanged.data(), nullptr, nullptr);
    ///
    /// for(size_t i = 0; i < allocations.size(); ++i)
    /// {
    /// if(allocationsChanged[i])
    /// {
    /// VmaAllocationInfo allocInfo;
    /// vmaGetAllocationInfo(allocator, allocations[i], &allocInfo);
    ///
    /// vkDestroyBuffer(device, buffers[i], nullptr);
    ///
    /// VkBufferCreateInfo bufferInfo = ...;
    /// vkCreateBuffer(device, &bufferInfo, nullptr, &buffers[i]);
    ///
    /// // You can make dummy call to vkGetBufferMemoryRequirements here to silence validation layer warning.
    ///
    /// vkBindBufferMemory(device, buffers[i], allocInfo.deviceMemory, allocInfo.offset);
    /// }
    /// }
    /// \endcode
    ///
    /// Note: Please don't expect memory to be fully compacted after this call.
    /// Algorithms inside are based on some heuristics that try to maximize number of Vulkan
    /// memory blocks to make totally empty to release them, as well as to maximimze continuous
    /// empty space inside remaining blocks, while minimizing the number and size of data that
    /// needs to be moved. Some fragmentation still remains after this call. This is normal.
    ///
    /// Warning: This function is not 100% correct according to Vulkan specification. Use it
    /// at your own risk. That's because Vulkan doesn't guarantee that memory
    /// requirements (size and alignment) for a new buffer or image are consistent. They
    /// may be different even for subsequent calls with the same parameters. It really
    /// does happen on some platforms, especially with images.
    ///
    /// Warning: This function may be time-consuming, so you shouldn't call it too often
    /// (like every frame or after every resource creation/destruction).
    /// You can call it on special occasions (like when reloading a game level or
    /// when you just destroyed a lot of objects).
    pub fn vmaDefragment(
        allocator: VmaAllocator,
        pAllocations: *mut VmaAllocation,
        allocationCount: usize,
        pAllocationsChanged: *mut VkBool32,
        pDefragmentationInfo: *const VmaDefragmentationInfo,
        pDefragmentationStats: *mut VmaDefragmentationStats,
    ) -> VkResult;
}
extern "C" {
    /// \brief Binds buffer to allocation.
    ///
    /// Binds specified buffer to region of memory represented by specified allocation.
    /// Gets `VkDeviceMemory` handle and offset from the allocation.
    /// If you want to create a buffer, allocate memory for it and bind them together separately,
    /// you should use this function for binding instead of standard `vkBindBufferMemory()`,
    /// because it ensures proper synchronization so that when a `VkDeviceMemory` object is used by multiple
    /// allocations, calls to `vkBind*Memory()` or `vkMapMemory()` won't happen from multiple threads simultaneously
    /// (which is illegal in Vulkan).
    ///
    /// It is recommended to use function vmaCreateBuffer() instead of this one.
    pub fn vmaBindBufferMemory(
        allocator: VmaAllocator,
        allocation: VmaAllocation,
        buffer: VkBuffer,
    ) -> VkResult;
}
extern "C" {
    /// \brief Binds image to allocation.
    ///
    /// Binds specified image to region of memory represented by specified allocation.
    /// Gets `VkDeviceMemory` handle and offset from the allocation.
    /// If you want to create an image, allocate memory for it and bind them together separately,
    /// you should use this function for binding instead of standard `vkBindImageMemory()`,
    /// because it ensures proper synchronization so that when a `VkDeviceMemory` object is used by multiple
    /// allocations, calls to `vkBind*Memory()` or `vkMapMemory()` won't happen from multiple threads simultaneously
    /// (which is illegal in Vulkan).
    ///
    /// It is recommended to use function vmaCreateImage() instead of this one.
    pub fn vmaBindImageMemory(
        allocator: VmaAllocator,
        allocation: VmaAllocation,
        image: VkImage,
    ) -> VkResult;
}
